# movie

./: .gitignore  pyproject.toml
dags/: movie.py
notes/: Untitled.ipynb  Untitled1.ipynb  code trans.ipynb  data.ipynb  quiz.ipynb
src/movie/api/: call.py
tests/: test_call.py
